--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -1,7 +1,7 @@
 indices:
   blog-index:
     include:
-      - /blog/
+      - /blog/**
     exclude:
       - /api/
     target: /query-index.json
@@ -21,5 +21,4 @@ indices:
       content:
         select: "main p"
         value: |
-          // Join all paragraph texts into a single string
           return Array.from(els).map(e => e.textContent.trim()).join('\n\n');
