--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -32,5 +32,5 @@ indices:
         select: 'meta[name="category"]'
         value: attribute(el, "content")
       tag:
-        select: meta[property="article:tag"]
+        selectFirst: meta[property="article:tag"]
         value: attribute(el, "content")
